fix logo zoom on mobile

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body{
 
     .logo:hover {
         cursor: pointer;
-        transform: scale(0);
+        transform: scale(1);
     }
 }
 
